# meeting-trans

./: .gitignore  Makefile  README.md
backend/: config.yaml  pyproject.toml  requirements.txt
backend/app/: audio_processor.py  config.py  main.py  model_loader.py  translator.py  vad.py  websocket_handler.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: audio-worklet-processor.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: audio_capture.rs  backend_server.rs  main.rs
frontend/src-tauri/swift-helper/: CaptureAudio.swift
frontend/src/components/: caption-overlay.tsx  control-bar.tsx  error-boundary.tsx  loading-screen.tsx  record-button.tsx  status-indicator.tsx  subtitle-display.tsx  subtitle-entry.tsx
frontend/src/hooks/: use-audio-capture.ts  use-subtitles.ts  use-system-audio.ts  use-websocket.ts
frontend/src/utils/: export-transcript.ts
plans/260319-1920-realtime-speech-translator/: COMPLETION-INDEX.md  PROJECT-COMPLETION-SUMMARY.md  brainstorm-summary.md  phase-01-setup-project-and-dependencies.md  phase-02-build-backend-seamlessm4t.md  phase-03-build-frontend-mic-websocket.md  phase-04-integration-testing-polish.md  plan.md
plans/reports/: researcher-260319-local-translation-models.md  researcher-260319-sota-open-source-stt-models.md  researcher-260319-translation-api-comparison.md  researcher-260319-web-speech-api.md  reviewer-260319-full-codebase-review.md
(+2 files in other folders)
