[project]
name = "stt-translator"
version = "0.1.0"
description = "Real-time multilingual speech translator using SeamlessM4T v2"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.20.0",
    "ctranslate2>=4.0.0",
    "deep-translator>=1.11.0",
    "mlx-whisper>=0.4.0",
    "soundfile>=0.12.0",
    "sherpa-onnx>=1.10.0",
]
